--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="main.css">
     <title>Color Fun</title>
 </head>
 <body>
@@ -28,6 +29,6 @@
     <footer>
         <p>&copy; color fun</p>
     </footer>
-    
+    <script type="module" src="./src/index.js"></script>
 </body>
 </html>
