grabbed color buttons node and created colors array with for loop to create a new color button linked with a color from array

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <main>
         <section id="color-buttons">
-            <h2>Paint the canvas</h2>
+            <p>Paint the canvas</p>
         </section>
 
         <section id="canvas">
@@ -22,7 +22,7 @@
         </section>
 
         <section id="transform-buttons">
-            <h2>Transform shape</h2>
+            <p>Transform shape</p>
         </section>
     </main>
 
