added for loop for transform buttons

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <main>
         <section id="color-buttons">
-            <p>Paint the canvas</p>
+            <p>Paint the canvas!</p>
         </section>
 
         <section id="canvas">
